[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concept_space"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "datasets>=2.0",
    "scikit-learn>=1.0",
    "concept-erasure==0.2.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.4",
    "tqdm>=4.0",
    "einops>=0.6",
    "GitPython>=3.1",
    "multiprocess>=0.70",
    "python-dotenv>=1.0",
]
